deletes: add views instead of filtering
Signed-off-by: Maciej Obuchowski <obuchowski.maciej@gmail.com>